--- a/book_review_backend/book_review/config/database.yml
+++ b/book_review_backend/book_review/config/database.yml
@@ -25,6 +25,10 @@ development:
   <<: *default
   database: book_review_development
 
+  host: localhost
+  name: attempt
+  password: 1010101
+
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -58,6 +62,10 @@ development:
 test:
   <<: *default
   database: book_review_test
+
+  host: localhost
+  name: attempt
+  password: 1010101
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
