--- a/book_review_backend/book_review/config/database.yml
+++ b/book_review_backend/book_review/config/database.yml
@@ -26,8 +26,8 @@ development:
   database: book_review_development
 
   host: localhost
-  name: attempt
-  password: 1010101
+  user: book_review
+  password: 123456
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -64,8 +64,8 @@ test:
   database: book_review_test
 
   host: localhost
-  name: attempt
-  password: 1010101
+  user: book_review
+  password: 123456
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
